# SNP

./: CMakeLists.txt
Praktikum5/: SortierenVonStrings.c
Test/: main.c
Tutorials/Arrays/einfaches array/: main.c
Tutorials/Pointers/einfacher pointer/: main.c
Vorlesung 6_Parameter by reference/Array Pointers als Parameter/: main.c
Vorlesung 6_Parameter by reference/Rückgabewert_Heap speicher/: main.c
Vorlesung1/Aufzählungstyp/: main.c
Vorlesung1/Ausdrücke/: main.c
Vorlesung1/Formatiertem Output/: main.c
Vorlesung1/Strukturen/: main.c
Vorlesung2/Funktionsdeklaration/: main.c
Vorlesung2/Globale statische Variabeln/: main.c
Vorlesung2/Lokale Variablen/: main.c
Vorlesung2/Rückgabewert/: main.c
Vorlesung3/Präprozessor define/: main.c
Vorlesung4_Arrays_Pointers/Arrays_Konstante Elemente/: main.c
Vorlesung4_Arrays_Pointers/Pointers/: main.c
Vorlesung4_Arrays_Pointers/String/char_arrays/: main.c  main2.c
Vorlesung5_Pointers_und_Arrays/Jagged_Array/: main.c
Vorlesung5_Pointers_und_Arrays/Operation mit Pointern/: main.c
Vorlesung5_Pointers_und_Arrays/Rechnen mit adressen/: main.c
Vorlesung5_Speicher/Heap_Malloc/: main.c
Zusammenfassung/Array/: Array char ausgaben.c  Array int.c  Arrays char.c
Zusammenfassung/Array und Pointer/: char Array char vs charPointer.c  char Array und Pointer Arithmetik.c  char Array und Pointer Speicheradressen.c  char Array und Pointer groessen berechnen.c  int Array und Pointer Speicheradressen.c  int Array und Pointer groessen berechnen.c  int pointer array vs array.c
Zusammenfassung/Array und Pointer/funktionen/: funktion Pointer parameter inverse berechen.c  funktion Pointer parameter primzahl berechnen.c
Zusammenfassung/Array/funktionen/: funktion array primzahl berechnen.c
Zusammenfassung/Ausgaben/: ausgaben.c
Zusammenfassung/Heap/: malloc char beispiel.c  malloc int beispiel.c
Zusammenfassung/Modulo/: modulo Wochentagrechner.c  modulo primzahlrechner.c  modulo schaltjahre berechnen.c  modulo zwei letzten zahlen herausfinden.c
Zusammenfassung/Pointer/: Int Pointer Arithmetik.c
zPrüfung2012/2/: main.c
zPrüfung2012/4/: main.c
zPrüfung2020/: main.c
zPrüfung2020/2d/: inverse_2d.c
zPrüfung2020/3a/: modula_3a.c
zPrüfung2020/3b/: 3b.c
zPrüfung2020/4a/: 4a.c
zPrüfung2020/6/: 6.c
